fix: scrollbar

--- a/src/styles/style.scss
+++ b/src/styles/style.scss
@@ -15,7 +15,7 @@
 /* Works on Firefox */
 * {
   scrollbar-width: thin;
-  scrollbar-color: --accent --background;
+  scrollbar-color: var(--accent) var(--background);
 }
 
 /* Works on Chrome, Edge, and Safari */
@@ -24,11 +24,11 @@
 }
 
 *::-webkit-scrollbar-track {
-  background: --background;
+  background: var(--background);
 }
 
 *::-webkit-scrollbar-thumb {
-  background-color: --accent;
+  background-color: var(--accent);
   border-radius: 20px;
-  border: 3px solid --background;
+  border: 3px solid var(--background);
 }
